# computer-vision

./: CMakeLists.txt  Readme.md
src/: image.cpp  main.cpp  master.cpp  program.cpp  trackbar.cpp  trackbar2.cpp  trackbar3.cpp  trackbar4.cpp  trackbar5.cpp  trackbar5threshold.cpp
